Add write_cry_gui examples

--- a/examples/cry_file_readwrite_examples.ipynb
+++ b/examples/cry_file_readwrite_examples.ipynb
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "<cry_file_readwrite.Crystal_input at 0x7fb3d8091130>"
+       "<cry_file_readwrite.Crystal_input at 0x7fccb9965580>"
       ]
      },
      "execution_count": 2,
@@ -89,7 +89,7 @@
     {
      "data": {
       "text/plain": [
-       "<cry_file_readwrite.Crystal_output at 0x7fb3d8091be0>"
+       "<cry_file_readwrite.Crystal_output at 0x7fccb99655e0>"
       ]
      },
      "execution_count": 4,
@@ -320,7 +320,7 @@
     {
      "data": {
       "text/plain": [
-       "<cry_file_readwrite.Crystal_bands at 0x7fb3d811d1f0>"
+       "<cry_file_readwrite.Crystal_bands at 0x7fcc8803cb50>"
       ]
      },
      "execution_count": 7,
@@ -365,7 +365,7 @@
     {
      "data": {
       "text/plain": [
-       "<cry_file_readwrite.Crystal_doss at 0x7fb3d80bf820>"
+       "<cry_file_readwrite.Crystal_doss at 0x7fcc8803c4c0>"
       ]
      },
      "execution_count": 9,
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "2417bd82",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "f008e190",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "c894748b",
    "metadata": {},
    "outputs": [],
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "716ee7d0",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "a5e86f39",
    "metadata": {},
    "outputs": [],
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "1aa05d78",
    "metadata": {},
    "outputs": [],
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "94d3ed96",
    "metadata": {},
    "outputs": [
@@ -645,16 +645,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NEWK\r\n",
-      "12 24\r\n",
-      "1 0\r\n",
       "BAND\r\n",
       "BAND STRUCTURE CALCULATION\r\n",
-      "3 4 200 1 26 0 1\r\n",
+      "3 4 200 1 26 1 0\r\n",
       "0 0 0  2 0 0\r\n",
       "2 0 0  2 2 2\r\n",
       "2 2 2  1 0 2\r\n",
-      "END\r\n"
+      "END\r\n",
+      "NEWK\r\n",
+      "12 24\r\n",
+      "1 0\r\n"
      ]
     }
    ],
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "9698e3ba",
    "metadata": {},
    "outputs": [],
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "248e9606",
    "metadata": {},
    "outputs": [
@@ -717,12 +717,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NEWK\r\n",
-      "12 24\r\n",
-      "1 0\r\n",
       "BAND\r\n",
       "BAND STRUCTURE CALCULATION\r\n",
-      "11 8 200 1 26 0 1\r\n",
+      "11 8 200 1 26 1 0\r\n",
       "0 0 0  4 0 4\r\n",
       "4 0 4  4 2 5\r\n",
       "4 2 5  2 2 5\r\n",
@@ -734,7 +731,10 @@
       "4 4 4  2 2 5\r\n",
       "2 2 5  5 2 5\r\n",
       "5 2 5  4 0 4\r\n",
-      "END\r\n"
+      "END\r\n",
+      "NEWK\r\n",
+      "12 24\r\n",
+      "1 0\r\n"
      ]
     }
    ],
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "1ce65af5",
    "metadata": {},
    "outputs": [],
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "58a3e00e",
    "metadata": {},
    "outputs": [
@@ -784,13 +784,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NEWK\r\n",
-      "12 24\r\n",
-      "1 0\r\n",
       "DOSS\r\n",
       "0 200 -1 -1 2 12 1\r\n",
       "-0.18374651800348382 0.5512395540104514\r\n",
-      "END\r\n"
+      "END\r\n",
+      "NEWK\r\n",
+      "12 24\r\n",
+      "1 0\r\n"
      ]
     }
    ],
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "62c51e8e",
    "metadata": {},
    "outputs": [],
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "85e99284",
    "metadata": {},
    "outputs": [
@@ -841,20 +841,388 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NEWK\r\n",
-      "12 24\r\n",
-      "1 0\r\n",
       "DOSS\r\n",
       "2 200 1 26 2 12 1\r\n",
       "-1 1\r\n",
       "-1 2\r\n",
-      "END\r\n"
+      "END\r\n",
+      "NEWK\r\n",
+      "12 24\r\n",
+      "1 0\r\n"
      ]
     }
    ],
    "source": [
     "!cat data/pdoss_input.d3"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8666bd36",
+   "metadata": {},
+   "source": [
+    "### write_cry_gui function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b70b5b3",
+   "metadata": {},
+   "source": [
+    "#### from pymatgen structure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "176df04b",
+   "metadata": {},
+   "source": [
+    "#### bulk (3D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "36f7ffd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(1, '../')\n",
+    "\n",
+    "from cry_file_readwrite import write_cry_gui\n",
+    "\n",
+    "from pymatgen.core import Structure, Lattice\n",
+    "from pymatgen.core.surface import SlabGenerator\n",
+    "\n",
+    "#Generate bulk structure\n",
+    "substrate = Structure.from_spacegroup(\"Fm-3m\", Lattice.cubic(4.217), [\"Mg\",'O'], [[0, 0, 0],[0.5,0.5,0.5]])\n",
+    "\n",
+    "#The dimensionality parameter is optional. The function will recognise it is a pymatgen bulk object\n",
+    "write_cry_gui('data/mgo_write_gui.gui',substrate,dimensionality=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0e385da4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3   1   1\r\n",
+      "-1.2910838880010971e-16 2.1085 2.1085\r\n",
+      "2.1085 0.0 2.1085\r\n",
+      "2.1085 2.1085 2.5821677760021943e-16\r\n",
+      "48\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-0.0 -1.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-0.0 1.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "-0.0 -1.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "-1.0 -0.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "-0.0 -1.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 1.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "1.0 0.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 -1.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "-0.0 1.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "-1.0 -0.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "-0.0 1.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "1.0 0.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "-1.0 -0.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "-0.0 1.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-0.0 1.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "1.0 0.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "-0.0 1.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 -1.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-0.0 -1.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "1.0 0.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "-0.0 -1.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "-1.0 -0.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 1.0 -0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "-0.0 -1.0 0.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "2\r\n",
+      "12 0.0 0.0 0.0\r\n",
+      "8 2.1085 2.1085 2.1085\r\n",
+      "225 48"
+     ]
+    }
+   ],
+   "source": [
+    "! cat 'data/mgo_write_gui.gui'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1133ed57",
+   "metadata": {},
+   "source": [
+    "#### slab (2D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "502ec530",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(1, '../')\n",
+    "\n",
+    "from cry_file_readwrite import write_cry_gui\n",
+    "\n",
+    "from pymatgen.core import Structure, Lattice\n",
+    "from pymatgen.core.surface import SlabGenerator\n",
+    "\n",
+    "#Generate bulk structure\n",
+    "substrate = Structure.from_spacegroup(\"Fm-3m\", Lattice.cubic(4.217), [\"Mg\",'O'], [[0, 0, 0],[0.5,0.5,0.5]])\n",
+    "#Generate slab\n",
+    "substrate = SlabGenerator(substrate, (1,0,0), 5., 10., center_slab=False).get_slab()\n",
+    "\n",
+    "#The dimensionality parameter is optional. The function will recognise it is a pymatgen Slab object\n",
+    "write_cry_gui('data/mgo_100_write_gui.gui',substrate,dimensionality=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "df852c28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2   1   1\r\n",
+      "2.9818692962636706 0.0 0.0000\r\n",
+      "-1.8258683445725374e-16 2.9818692962636706 0.00000\r\n",
+      "0.0 0.0 500.00000\r\n",
+      "8\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "0.0 0.0 1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-1.0 0.0 0.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "-0.0 -0.0 1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-0.0 1.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-0.0 -1.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 0.0 -1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "-1.0 -0.0 0.0\r\n",
+      "0.0 1.0 0.0\r\n",
+      "-0.0 0.0 1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "1.0 0.0 0.0\r\n",
+      "0.0 -1.0 0.0\r\n",
+      "0.0 -0.0 1.0\r\n",
+      "0.0 0.0 0.0\r\n",
+      "8\r\n",
+      "12 1.49093 0.0 3.16275\r\n",
+      "12 -0.0 1.49093 1.05425\r\n",
+      "12 1.49093 0.0 -1.05425\r\n",
+      "12 -0.0 1.49093 -3.16275\r\n",
+      "8 1.49093 0.0 1.05425\r\n",
+      "8 -0.0 1.49093 3.16275\r\n",
+      "8 1.49093 0.0 -3.16275\r\n",
+      "8 -0.0 1.49093 -1.05425\r\n",
+      "129 16"
+     ]
+    }
+   ],
+   "source": [
+    "! cat 'data/mgo_100_write_gui.gui'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43e1a738",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
