New names in convert

--- a/examples/convert.ipynb
+++ b/examples/convert.ipynb
@@ -23,11 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.insert(1, '../')\n",
-    "\n",
-    "from cry_file_readwrite import Crystal_output\n",
-    "from cry_convert import cry_out2pmg"
+    "from crystal_functions.file_readwrite import Crystal_output\n",
+    "from crystal_functions.convert import cry_out2pmg"
    ]
   },
   {
@@ -43,20 +40,14 @@
       "text/plain": [
        "Structure Summary\n",
        "Lattice\n",
-       "    abc : 4.24022001638 4.24022001638 4.24022001638\n",
-       " angles : 90.0 90.0 90.0\n",
-       " volume : 76.23689071516961\n",
-       "      A : 4.24022001638 0.0 2.5963859353701527e-16\n",
-       "      B : -2.5963859353701527e-16 4.24022001638 2.5963859353701527e-16\n",
-       "      C : 0.0 0.0 4.24022001638\n",
+       "    abc : 2.998288327305232 2.998288327305232 2.998288327305232\n",
+       " angles : 59.99999999999999 59.99999999999999 59.99999999999999\n",
+       " volume : 19.059222678792402\n",
+       "      A : 0.0 2.12011000819 2.12011000819\n",
+       "      B : 2.12011000819 0.0 2.12011000819\n",
+       "      C : 2.12011000819 2.12011000819 0.0\n",
        "PeriodicSite: Mg (0.0000, 0.0000, 0.0000) [0.0000, 0.0000, 0.0000]\n",
-       "PeriodicSite: Mg (-0.0000, 2.1201, 2.1201) [0.0000, 0.5000, 0.5000]\n",
-       "PeriodicSite: Mg (2.1201, 0.0000, 2.1201) [0.5000, 0.0000, 0.5000]\n",
-       "PeriodicSite: Mg (2.1201, 2.1201, 0.0000) [0.5000, 0.5000, 0.0000]\n",
-       "PeriodicSite: O (2.1201, 0.0000, 0.0000) [0.5000, 0.0000, 0.0000]\n",
-       "PeriodicSite: O (2.1201, 2.1201, 2.1201) [0.5000, 0.5000, 0.5000]\n",
-       "PeriodicSite: O (0.0000, 0.0000, 2.1201) [0.0000, 0.0000, 0.5000]\n",
-       "PeriodicSite: O (-0.0000, 2.1201, 0.0000) [0.0000, 0.5000, 0.0000]"
+       "PeriodicSite: O (2.1201, 2.1201, 2.1201) [0.5000, 0.5000, 0.5000]"
       ]
      },
      "execution_count": 2,
@@ -85,11 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.insert(1, '../')\n",
-    "\n",
-    "from cry_file_readwrite import Crystal_output, Crystal_bands\n",
-    "from cry_convert import cry_bands2pmg"
+    "from crystal_functions.file_readwrite import Crystal_output, Crystal_bands\n",
+    "from crystal_functions.convert import cry_bands2pmg"
    ]
   },
   {
@@ -111,6 +99,35 @@
     "cry_bands = Crystal_bands('data/mgo_BAND_dat.BAND')\n",
     "bs = cry_bands2pmg(cry_output,cry_bands,labels=['\\\\Gamma','B','C','\\\\Gamma','E'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "4784bd40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(26, 201, 1)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cry_bands.bands.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0625a0dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -172,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
