Update examples with redefined classes

--- a/examples/calculate.ipynb
+++ b/examples/calculate.ipynb
@@ -18,15 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "032121ab",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'cry_bsse' from 'crystal_functions.calculate' (/Users/brunocamino/miniconda3/envs/test_env/lib/python3.9/site-packages/crystal_functions/calculate.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/f2/8kc7y9697m59bwltxjd42y300000gn/T/ipykernel_6345/1711536738.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcrystal_functions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalculate\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcry_bsse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'cry_bsse' from 'crystal_functions.calculate' (/Users/brunocamino/miniconda3/envs/test_env/lib/python3.9/site-packages/crystal_functions/calculate.py)"
+     ]
+    }
+   ],
    "source": [
-    "import sys\n",
-    "sys.path.insert(1, '../')\n",
-    "\n",
-    "from cry_calculate import cry_bsse"
+    "from crystal_functions.calculate import cry_bsse"
    ]
   },
   {
@@ -39,20 +50,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "633aad3d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:228: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[[PeriodicSite: Cu (0.0000, 0.0000, 0.0000) [0.0000, 0.0000, 0.0000],\n",
-       "  PeriodicSite: Cu (-0.0000, 1.7985, 1.7985) [0.0000, 0.5000, 0.5000],\n",
-       "  PeriodicSite: Cu (1.7985, 0.0000, 1.7985) [0.5000, 0.0000, 0.5000],\n",
-       "  PeriodicSite: Cu (1.7985, 1.7985, 0.0000) [0.5000, 0.5000, 0.0000]]]"
+       "(29, 29, 29, 29)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "d62a4450",
    "metadata": {},
    "outputs": [
@@ -91,12 +106,12 @@
       "Rot:\n",
       "[[ 6.1232340e-17  1.0000000e+00  0.0000000e+00]\n",
       " [-1.0000000e+00 -6.1232340e-17  0.0000000e+00]\n",
-      " [ 0.0000000e+00  1.2246468e-16 -1.0000000e+00]]\n",
+      " [-2.1890417e-33  1.2246468e-16 -1.0000000e+00]]\n",
       "tau\n",
       "[0. 0. 0.]\n",
       "[[ 6.1232340e-17  1.0000000e+00  0.0000000e+00  0.0000000e+00]\n",
       " [-1.0000000e+00 -6.1232340e-17  0.0000000e+00  0.0000000e+00]\n",
-      " [ 0.0000000e+00  1.2246468e-16 -1.0000000e+00  0.0000000e+00]\n",
+      " [-2.1890417e-33  1.2246468e-16 -1.0000000e+00  0.0000000e+00]\n",
       " [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  1.0000000e+00]]\n"
      ]
     },
@@ -105,11 +120,11 @@
       "text/plain": [
        "array([[ 6.1232340e-17,  1.0000000e+00,  0.0000000e+00],\n",
        "       [-1.0000000e+00, -6.1232340e-17,  0.0000000e+00],\n",
-       "       [ 0.0000000e+00,  1.2246468e-16, -1.0000000e+00],\n",
+       "       [-2.1890417e-33,  1.2246468e-16, -1.0000000e+00],\n",
        "       [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1702,7 +1717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
