--- a/examples/properties.ipynb
+++ b/examples/properties.ipynb
@@ -23,15 +23,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.insert(1, '../')\n",
-    "\n",
-    "from cry_properties import cry_newk"
+    "from crystal_functions.properties import cry_newk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "b38286a7",
    "metadata": {},
    "outputs": [
@@ -41,7 +38,7 @@
        "['NEWK\\n', '12 24\\n', '1 0\\n']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,15 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "23e2f215",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.insert(1, '../')\n",
-    "\n",
-    "from cry_properties import cry_bands"
+    "from crystal_functions.properties import cry_bands"
    ]
   },
   {
@@ -82,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "1cf0add3",
    "metadata": {},
    "outputs": [
@@ -91,14 +85,14 @@
       "text/plain": [
        "['BAND\\n',\n",
        " 'BAND STRUCTURE CALCULATION\\n',\n",
-       " '3 4 200 1 26 0 1\\n',\n",
+       " '3 4 200 1 26 1 0\\n',\n",
        " '0 0 0  2 0 0\\n',\n",
        " '2 0 0  2 2 2\\n',\n",
        " '2 2 2  1 0 2\\n',\n",
        " 'END\\n']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "fe83bc1f",
    "metadata": {},
    "outputs": [
@@ -131,7 +125,7 @@
       "text/plain": [
        "['BAND\\n',\n",
        " 'BAND STRUCTURE CALCULATION\\n',\n",
-       " '11 8 200 1 26 0 1\\n',\n",
+       " '11 8 200 1 26 1 0\\n',\n",
        " '0 0 0  4 0 4\\n',\n",
        " '4 0 4  4 2 5\\n',\n",
        " '4 2 5  2 2 5\\n',\n",
@@ -146,7 +140,7 @@
        " 'END\\n']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,9 +151,9 @@
     "\n",
     "from pymatgen.symmetry.bandstructure import HighSymmKpath\n",
     "from pymatgen.symmetry.analyzer import SpacegroupAnalyzer\n",
-    "from cry_file_readwrite import Crystal_output\n",
-    "from cry_convert import cry_out2pmg\n",
-    "from cry_properties import cry_bands\n",
+    "from crystal_functions.file_readwrite import Crystal_output\n",
+    "from crystal_functions.convert import cry_out2pmg\n",
+    "from crystal_functions.properties import cry_bands\n",
     "\n",
     "#Read the structure\n",
     "mgo = Crystal_output('data/mgo.out')\n",
@@ -186,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "5384e5a4",
    "metadata": {},
    "outputs": [
@@ -196,16 +190,13 @@
        "['DOSS\\n', '0 200 1 26 2 12 1\\n', 'END\\n']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.insert(1, '../')\n",
-    "\n",
-    "from cry_properties import cry_doss\n",
+    "from crystal_functions.properties import cry_doss\n",
     "\n",
     "#Band range\n",
     "doss_block = cry_doss(n_points=200,band_range=[1,26],plotting_option=2,poly=12,print_option=1)\n",
@@ -214,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "adfe9a91",
    "metadata": {},
    "outputs": [
@@ -227,16 +218,13 @@
        " 'END\\n']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.insert(1, '../')\n",
-    "\n",
-    "from cry_properties import cry_doss\n",
+    "from crystal_functions.properties import cry_doss\n",
     "\n",
     "#Energy range (in eV)\n",
     "doss_block = cry_doss(n_points=200,e_range=[-5,15],plotting_option=2,poly=12,print_option=1)\n",
@@ -253,26 +241,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "bc6ca24f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['DOSS\\n', '2 200 1 26 2 12 1\\n', '-1 1\\n', '-1 2\\n', 'END\\n']"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cry_file_readwrite'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/f2/8kc7y9697m59bwltxjd42y300000gn/T/ipykernel_63384/2765533586.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#Atom index from input\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprojections\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m pdoss_block = cry_pdoss(projections,proj_type='atom',n_points=200,band_range=[1,26],\n\u001b[0m\u001b[1;32m      6\u001b[0m                        plotting_option=2,poly=12,print_option=1)\n\u001b[1;32m      7\u001b[0m \u001b[0mpdoss_block\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/test_env/lib/python3.9/site-packages/crystal_functions/properties.py\u001b[0m in \u001b[0;36mcry_pdoss\u001b[0;34m(projections, proj_type, output_file, n_points, band_range, e_range, plotting_option, poly, print_option)\u001b[0m\n\u001b[1;32m    132\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 134\u001b[0;31m     \u001b[0;32mfrom\u001b[0m \u001b[0mcry_file_readwrite\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCrystal_output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    135\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m     \u001b[0mpdoss_block\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cry_file_readwrite'"
+     ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.insert(1, '../')\n",
-    "\n",
-    "from cry_properties import cry_pdoss\n",
+    "from crystal_functions.properties import cry_pdoss\n",
     "\n",
     "#Atom index from input\n",
     "projections = [[1],[2]]\n",
@@ -283,30 +272,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "cfcf35de",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['DOSS\\n',\n",
-       " '2 200 1 26 2 12 1\\n',\n",
-       " '13 1 2 3 4 5 6 7 8 9 10 11 12 13\\n',\n",
-       " '13 14 15 16 17 18 19 20 21 22 23 24 25 26\\n',\n",
-       " 'END\\n']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cry_file_readwrite'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/f2/8kc7y9697m59bwltxjd42y300000gn/T/ipykernel_63384/1832034118.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m               [14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]]\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m pdoss_block = cry_pdoss(projections,proj_type='ao',n_points=200,band_range=[1,26],\n\u001b[0m\u001b[1;32m      9\u001b[0m                        plotting_option=2,poly=12,print_option=1)\n\u001b[1;32m     10\u001b[0m \u001b[0mpdoss_block\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/test_env/lib/python3.9/site-packages/crystal_functions/properties.py\u001b[0m in \u001b[0;36mcry_pdoss\u001b[0;34m(projections, proj_type, output_file, n_points, band_range, e_range, plotting_option, poly, print_option)\u001b[0m\n\u001b[1;32m    132\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 134\u001b[0;31m     \u001b[0;32mfrom\u001b[0m \u001b[0mcry_file_readwrite\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCrystal_output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    135\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m     \u001b[0mpdoss_block\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cry_file_readwrite'"
+     ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.insert(1, '../')\n",
-    "\n",
-    "from cry_properties import cry_pdoss\n",
+    "from crystal_functions.properties import cry_pdoss\n",
     "import numpy as np\n",
     "\n",
     "#AO index from input\n",
@@ -320,26 +306,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "4e4197b8",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['DOSS\\n', '2 200 1 26 2 12 1\\n', '-1 1\\n', '-1 2\\n', 'END\\n']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cry_file_readwrite'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/f2/8kc7y9697m59bwltxjd42y300000gn/T/ipykernel_63384/2016671186.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprojections\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Mg'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'O'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m pdoss_block = cry_pdoss(projections,proj_type='atom',output_file='data/mgo.out',n_points=200,band_range=[1,26],\n\u001b[0m\u001b[1;32m      8\u001b[0m                        plotting_option=2,poly=12,print_option=1)\n\u001b[1;32m      9\u001b[0m \u001b[0mpdoss_block\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/test_env/lib/python3.9/site-packages/crystal_functions/properties.py\u001b[0m in \u001b[0;36mcry_pdoss\u001b[0;34m(projections, proj_type, output_file, n_points, band_range, e_range, plotting_option, poly, print_option)\u001b[0m\n\u001b[1;32m    132\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 134\u001b[0;31m     \u001b[0;32mfrom\u001b[0m \u001b[0mcry_file_readwrite\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCrystal_output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    135\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m     \u001b[0mpdoss_block\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cry_file_readwrite'"
+     ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.insert(1, '../')\n",
-    "\n",
-    "from cry_properties import cry_pdoss\n",
+    "from crystal_functions.properties import cry_pdoss\n",
     "import numpy as np\n",
     "\n",
     "#Atom index from symbol\n",
@@ -367,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
