Replace all old naming convention

--- a/examples/convert.ipynb
+++ b/examples/convert.ipynb
@@ -71,12 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e8ca29dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import Crystal_output, Crystal_bands\n",
+    "from crystal_functions.file_readwrite import Crystal_output, Properties_output\n",
     "from crystal_functions.convert import cry_bands2pmg"
    ]
   },
@@ -90,13 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4be2730e",
    "metadata": {},
    "outputs": [],
    "source": [
     "cry_output = Crystal_output('data/mgo_optgeom.out')\n",
-    "cry_bands = Crystal_bands('data/mgo_BAND_dat.BAND')\n",
+    "cry_bands = Properties_output('data/mgo_BAND_dat.BAND').read_cry_bands()\n",
     "bs = cry_bands2pmg(cry_output,cry_bands,labels=['\\\\Gamma','B','C','\\\\Gamma','E'])"
    ]
   },
